2004-04-15  Lawrence Mitchell  <wence@gmx.li>

	* multi-region.el: New file.

2004-03-31  Lawrence Mitchell  <wence@gmx.li>

	* css-mode.el (css-mode-find-context): Ignore blank lines when
	checking to see if the previous line is closed.

2004-02-27  Lawrence Mitchell  <wence@gmx.li>

	* css-mode.el (css-mode-calc-indent-level): Fix indentation bug.

	* cite.el (cite-headers-to-parse): New variable.
	(cite-parse-headers): Use it.
	(cite-from-massagers): New variable.
	(cite-parse-from): Use it.
	(cite-parse-message-id): New function, renamed from
	`cite-parse-mid'.
	(cite-parse-newsgroups): New function, renamed from
	`cite-parse-groups'.

2004-02-16  Lawrence Mitchell  <wence@gmx.li>

	* ogg-comment.el (with-part-of-file): Renamed from
	`oggc-with-part-of-file'.
	(oggc-valid-ogg-stream-p, oggc-write-comments): Remove need for
	`assert'.
	Remove runtime need for cl package.

2003-07-03  Lawrence Mitchell  <wence@gmx.li>

	* cite.el (cite-uncite-region): Fix infinite-loop bug.
	(cite-count-cite-marks): Rework using LOOP.

2003-06-13  Lawrence Mitchell  <wence@gmx.li>

	* cite.el (cite-quote-empty-lines): New variable.
	(cite-cite-region): Use it.

2003-06-08  Lawrence Mitchell  <wence@gmx.li>

	* cite.el (cite-cite-region): New optional argument PREFIX.
	(cite-quote-region): New function.
	(cite-reinsert-sig): Add message about lack of signature, if no
	signature found.
	(cite-rewrap-long-lines): Use MAKE-STRING, not MAPCONCAT to
	generate FILL-PREFIX.
	Made installations instructions fuller.  Removed RCS "Log"
	header.

2003-05-30  Lawrence Mitchell  <wence@gmx.li>

	* get-rfc.el (get-rfc-grep-rfc-index): Added "-i" to GREP-FLAGS.

	* google.el (google): Added NO-BROWSE optional argument.
	(google-not-encoded-chars): New variable.
	(google-make-sendable-string): Use it.

2003-04-28  Lawrence Mitchell  <wence@gmx.li>

	* erc-log.el: Integrated antifuch's changes.  i.e. synched with
	current ERC CVS version.

2003-04-27  Lawrence Mitchell  <wence@gmx.li>
