@@ -1,5 +1,8 @@
 2004-04-15  Lawrence Mitchell  <wence@gmx.li>
 
+	* find-lib.el (find-lib-find-files): Don't barf if directory is
+	unreadable.
+
 	* multi-region.el: New file.
 
 2004-03-31  Lawrence Mitchell  <wence@gmx.li>
